<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".WeatherActivity" >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:src="@drawable/weather_icon" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="431dp"
        android:layout_height="46dp"
        android:text="@string/information" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="75dp"
        android:layout_height="42dp"
        android:text="@string/monday" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="75dp"
        android:layout_height="31dp"
        android:text="@string/tuesday" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="75dp"
        android:layout_height="36dp"
        android:text="@string/wednesday" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="75dp"
        android:layout_height="42dp"
        android:text="@string/thursday" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="75dp"
        android:layout_height="39dp"
        android:text="@string/friday" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="76dp"
        android:layout_height="33dp"
        android:text="@string/saturday" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="75dp"
        android:layout_height="42dp"
        android:text="@string/sunday" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_to_main_manu" />

</LinearLayout>
