<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    tools:ignore="ExtraText">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="match_parent"
        android:layout_height="248dp"
        app:srcCompat="@drawable/weather_icon"
        android:contentDescription="@string/Todo"
        tools:ignore="ContentDescription" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather_master"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/cityEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_city_name"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        android:autofillHints="" />

    <Button
        android:id="@+id/getWeatherButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_weather"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/weatherTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:gravity="center" />

</LinearLayout>
